<resources>
    <!-- Keys API -->
    <string name="app_name">PokeCard</string>
    <string name="facebook_app_id">224940471373683</string>
    <string name="fb_login_protocol_scheme">fb224940471373683</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">zUkfPvMpAbXVQ31wxxD0KJtkN</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">3qbNAVx3kQEXEI36W9FKRvm7sgLvanNvgOwbXxGyR4BeCzZDXC</string>
    <string name="google_maps_key"> AIzaSyAnuIPRjAf-IMMqGJ9As3TEm1MBRcioygw </string>

    <!-- MainActivity -->
    <string name="user">Utilisateur</string>
    <string name="id">ID :</string>
    <string name="nbCards">Nombre de cartes :</string>
    <string name="lastCard">Dernière carte obtenue</string>
    <string name="name">Nom</string>
    <string name="type">Type</string>
    <string name="power">Force</string>
    <string name="string_internet_connection_not_available">Aucune connexion internet !</string>

    <!-- BottomNavigation -->
    <string name="title_accueil">Accueil</string>
    <string name="title_plan">Plan</string>
    <string name="title_friends">Amis</string>
    <string name="title_cartes">Mes cartes</string>
    <string name="title_liste">Liste de pokemon</string>

    <!-- ProfileActivity -->
    <string name="updatePass">Modifier mot de passe</string>
    <string name="validate">Valider</string>
    <string name="confirm">Confirmer</string>
    <string name="date_d_inscription">Date d\'inscription :</string>

    <!-- FriendsActivity -->
    <string name="friends">Amis</string>

    <!-- NavigationDrawer -->
    <string name="profile">Profile</string>
    <string name="fb">Facebook</string>
    <string name="twit">Twitter</string>
    <string name="google">Google</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- Donation -->
    <string name="Tittle_don">Faire un don</string>
    <string name="send_Money_Don">Entrez le montant du don</string>
    <string name="Donnation">Soutenir</string>
    <string name="message_Don">C\'est grace à vos dons que l\'application continue d\'exister, Merci !</string>
    <string name="Don">Don</string>

    <!-- Map -->
    <string name="title_activity_maps">Map</string>
    <string name="Position">Detecter ma position</string>

    <!-- Authentification -->
    <string name="Share">Inviter mes amis</string>
    <string name="Login">S\'identifer</string>
    <string name="Other_Login">Autre moyen d\'identification</string>
    <string name="old_password">Ancien mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="email">Email</string>
    <string name="login_button">Se connecter</string>
    <string name="Register_Now">Pas encore inscrit ?</string>

    <string name="pseudo">Pseudo</string>
    <string name="login_name">Nom</string>
    <string name="login_email">Email</string>
    <string name="login_password">Mot de passe</string>
    <string name="register">S\'inscrire</string>
    <string name="registered_login">Déjà inscrit ? Connectes toi !</string>

</resources>