<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_plan" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_accueil"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_accueil" />
    <item
        android:id="@+id/navigation_cartes"
        android:icon="@drawable/icon_cards"
        android:title="@string/title_cartes" />
    <item
        android:id="@+id/navigation_liste"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/title_liste" />

</menu>
